# texto

./: .gitignore  .gitpod.dockerfile  .gitpod.yml  3d.cpp  3d.hpp  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  RGBA.cpp  RGBA.hpp  build.sh  main.cpp  main.hpp  matrix.cpp  matrix.hpp  render.cpp  render.hpp  scales.hpp
.github/workflows/: build-project.yml  cmake.yml  codeql.yml
docs/: Doxyfile  head.html
includes/: 3d.h  3d.hpp  image.h  render.h  rgba.h  rgba.hpp  scales.h  scales.hpp  video.h
libtexmath/: CMakeLists.txt
libtexmath/includes/: texmath.h  vector2.h  vector3.h
libtexmath/includes/texmath/: mat.h  vec.h  vec2.h  vec3.h
libtexmath/tests/: access.cpp  substraction.cpp
libtexto/: CMakeLists.txt
libtexto-math/: CMakeLists.txt
libtexto-math/includes/: matrix.h  texto-math.h
libtexto-math/includes/texto-math/: mat.h  vec.h
libtexto-math/src/: mat.cpp
libtexto/includes/: texto.h
libtexto/includes/texto/: image.h  utils.h
libtexto/src/: image.cpp
math/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  Vector4.hpp  matrix.cpp  matrix.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp  vector4.cpp  vector4.hpp
math/includes/: matrix.h  matrix.hpp  vector2.h  vector2.hpp  vector4.h  vector4.hpp
math/src/: matrix.cpp  vector2.cpp  vector3.cpp  vector4.cpp
src/: 3d.cpp  3d.hpp  image.cpp  render.cpp  render.hpp  rgba.hpp  scales.cpp  scales.hpp  video.cpp
src/math/: Matrix.cpp  Matrix.hpp  vector2.cpp  vector3.cpp  vector3.hpp  vector4.cpp  vector4.hpp
tests/: CMakeLists.txt  access.cpp  addition.cpp  multiplication.cpp  transpose.cpp  zeromatrix.cpp
